--- a/src/components/Information/Information.css
+++ b/src/components/Information/Information.css
@@ -1,13 +1,14 @@
 .information-box {
   display: flex;
   flex-direction: row;
+  justify-content: flex-start;
 }
 
 .info-left {
   display: flex;
   flex-direction: column;
-  margin-top: 2vh;
-  margin-left: 2vw;
+  margin-top: 2em;
+  margin-left: 2em;
   flex-grow: 1;
 }
 
@@ -37,5 +38,13 @@ h1 {
   flex: 0 1 auto;
 }
 
-.title {
+.gold-image-container {
+  max-width: 450px;
+  margin-top: 2em;
+  margin-right: ;
+}
+
+.gold-image {
+  max-width: 100%;
+  max-height: 100%;
 }
