--- a/src/components/SidebarItem/SidebarItem.css
+++ b/src/components/SidebarItem/SidebarItem.css
@@ -7,8 +7,8 @@
   justify-content: space-between;
   background-color: #1a1818;
   color: white;
-  min-height: 65px;
-  max-height: 65px;
+  min-height: 55px;
+  max-height: 55px;
 }
 
 .sidebar-item:hover {
